# aqgpt

./: .env.example  README.md  pyproject.toml
.streamlit/: config.toml
aqgpt_core/: app.py  config.py  render.py
aqgpt_core/data/: aqi_data.csv
aqgpt_core/llm/: __init__.py  base.py  data_extractor.py  gemini_provider.py  prompts.py  qwen_provider.py  session_cache.py  tool_registry.py
aqgpt_core/rag/: __init__.py  generator.py  pipeline.py  settings.py  store.py
aqgpt_core/templates/: landing.css  landing.html
aqgpt_core/tools/: __init__.py  aq.py  attribution.py  met.py  satellite.py  sources.py
chroma_db/: chroma.sqlite3
